--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
-   <h1>PetMedications</h1>
+   <h1>PetMedications.edu</h1>
+   <h2>how to make cute pets feel better</h2>
+   <h2>how you know pets are sick</h2>
+   <h2>how to give pets shots when they need it</h2>
   </body>
 </html>
