--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
    <h1>PetMedications.edu</h1>
    <h2>how to make cute pets feel better</h2>
    <h2>how you know pets are sick</h2>
+   <p>how to give pets shots</p>
    <h2>how to give pets shots when they need it</h2>
   </body>
 </html>
