--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
    <h2>how you know pets are sick</h2>
    <h2>how to give pets shots when they need it</h2>
    <p>how to give pets shots</p>
+   <img src="http://2.bp.blogspot.com/-k5ITfMLIO5E/TfKvTwYHIWI/AAAAAAAAAIs/M1jBurXwGZ8/s1600/PO.jpg" />
   </body>
 </html>
